2008-10-28  Ingo Renner  <ingo@typo3.org>

	* Added the manual for the OpenID system extension

2008-10-28  Martin Kutschker  <masi@typo3.org>

	* Added feature #9625: Integrate possibility to extend TCEforms palettes easily (implementation by Oliver Hader)
	* Added feature #9474: Integrate OpenID authentication support to TYPO3 (integration by Dmitry Dulepov, OpenID library by JanRain Inc.)

2008-10-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9655: Call to t3lib_div::devLog() without key in index_ts.php (thanks to Francois Suter)
	* Fixed bug #9607: Module DB check uses hardcoded labels (thanks to Christopher Stelmaszyk)
	* Added feature ##9656: Extend t3lib_div::trimExplode to limit the number of elements
	* Follow-up to feature #9575: Return boolean value instead of filtered data
	* Fixed bug #9623: Flexform sections are not working anymore since script.aculo.us is not loaded
	* Fixed bug #9665: t3lib_BEfunc has a lot of hanging SQL record sets
	* Fixed bug #9664: EM fails on retrieving files of uppercase extension keys (thanks to Marcus Krause)
	* Added feature #7571: FeUsers in table sys_lockedrecords (thanks to Stefan Geith)
	* Added feature #8523: IRRE - Integrate possibility to define enabledControls in TCA
	* Fixed bug #5826: indexed_search: specify media types in advanced search

2008-10-24  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #9575: Return boolean value instead of filtered data

2008-10-23  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9613: htmlArea RTE uses JScodeLibArray to insert CSS

2008-10-22  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #8636: Hardcoded labels in Configuration module (thanks to Christopher Stelmaszyk)
	* Fixed bug #8505: String "File/Files" in Fileadmin are hardcoded (thanks to Stefano Kowalke)

2008-10-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #5019: htmlArea RTE hangs while editing link in Firefox

2008-10-21  Oliver Hader  <oliver@typo3.org>
