@@ -1,0 +1,37 @@
+#tx-sys-action-menu {
+	width: 30px;
+}
+
+#tx-sys-action-menu ul {
+	position: absolute;
+	list-style: none;
+	padding: 2px 0px 0px;
+	margin: 0px;
+	background-color: #f9f9f9;
+	border: 1px solid #abb2bc;
+	border-top: none;
+	width: 180px;
+}
+
+#tx-sys-action-menu li {
+	padding-top: 2px;
+	text-align: left;
+	float: none;
+	vertical-align: middle;
+	min-height: 19px;
+}
+
+#tx-sys-action-menu li img {
+	float: left;
+	padding-right: 3px;
+}
+
+#tx-sys-action-menu li a {
+	text-decoration: none;
+	line-height: 12px;
+	vertical-align: middle;
+	display: block;
+	padding-bottom: 2px;
+	padding-left: 3px;
+	font-size: 11px;
+}
