@@ -1,3 +1,7 @@
+2008-10-29  Ingo Renner  <ingo@typo3.org>
+
+	* Added feature #9591: Integrate sys_actions into toolbar
+
 2008-10-28  Ingo Renner  <ingo@typo3.org>
 
 	* Added the manual for the OpenID system extension
